Hide toggle widget on mobile, fix spinner position on mobile, remove focus outline

--- a/src/components/spinner/spinner-styles.module.scss
+++ b/src/components/spinner/spinner-styles.module.scss
@@ -51,7 +51,12 @@ $size: 100px;
 .spinnerAbsolute {
   position: absolute;
   top: 42%;
-  left: 47%;
+  left: 42%;
+
+  @media #{$tablet-portrait} {
+    top: 42%;
+    left: 47%;
+  }
 }
 
 .spinnerWithOverlay {
