--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -61,3 +61,7 @@ button {
 button:focus {
   outline: 0;
 }
+
+:focus {
+  outline: 0;
+}
